--- a/public/home.html
+++ b/public/home.html
@@ -17,7 +17,7 @@
     </style>
 </head>
 <body unresolved>
-<script src="https://developers.nuskin.com/playground-bootstrap.js"></script>
+<script src="playground-bootstrap.js"></script>
 <!-- <h3 style="position:fixed; z-index:2000; background-color: white;">h3 outside of polymer!</h3> -->
 <ns-header>
         <ns-profile id="ns-profile" slot="right-one">
