--- a/public/home.html
+++ b/public/home.html
@@ -27,7 +27,8 @@
         </ns-profile>
 </ns-header>
 <br/>
-HERE is some new markup
+HERE IS SOME MARKUP
 <br/>
+<ns-footer></ns-footer>
 </body>
 </html>
